--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,17 @@
-.center{
-  display:block;
-  margin-left:auto;
-  margin-right: auto;
-  width:50%;
+.page{
+  background-image: url("../images/bg2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  color: white;
+  text-align: center;
 }
-
-.bg2-show-box{
-  background-size:auto;
-  background-repeat:no-repeat;
-  background-image:
-  url(images/logo.png)image();
-  background-position:center;
-
-  }
+.page img{
+  padding-top: 35vh;
+}
+.mouse{
+  text-align: center;
+}
+.mouse img{
+  margin-top: -18vh;
+}
