--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     color: white;
     text-align: center;
 }
-h3{
+h3,h4{
     text-align: center;
 }
 
@@ -19,4 +19,43 @@ h3{
     background-size: cover;
     color: white;
     text-align: center;
+}
+
+.img-container {
+    float: left;
+    width: 33.33%;
+    padding: 10%;
+  }
+  .clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  
+  #items{
+      text-align: center;
+  }
+
+
+  #contact{
+    background-image: url("images/bg1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    text-align: center;
+}
+
+#size{
+height: 30vh;
+width: 50%;
+margin-top: 25px;
+opacity: 0.3;
+}
+
+#size3{
+    opacity: 0.5;
+}
+placeholder{
+    color: white;
 }
