added jquery and javascript functions

--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,20 @@ opacity: 0.3;
 placeholder{
     color: white;
 }
+.design{
+    display: none;
+}
+
+.development{
+    display: none;
+}
+
+.product{
+    display:none;
+}
+
+
+
+
+
+}
